// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Artist Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <article
    class=" svelte-fggesx"
  >
    <div
      class="content svelte-fggesx"
    >
      <img
        alt="./avatar.jpg"
        class="w-64 h-64 svelte-1fck65k rounded-full"
        loading="lazy"
        src="./avatar.jpg"
      />
       
      <p
        class="controls svelte-fggesx"
      >
        <button
          class="svelte-u16ygp primary iconOnly large"
          data-testid="play"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="svelte-u16ygp primary iconOnly large"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            playlist_add
          </i>
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-fggesx"
    >
      <h3>
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-fggesx"
      >
        2 albums
      </h4>
    </header>
  </article>
</section>
`;

exports[`Storyshots Components/Artist No Albums 1`] = `
<section
  class="storybook-snapshot-container"
>
  <article
    class=" svelte-fggesx"
  >
    <div
      class="content svelte-fggesx"
    >
      <img
        alt="./avatar.jpg"
        class="w-64 h-64 svelte-1fck65k rounded-full"
        loading="lazy"
        src="./avatar.jpg"
      />
       
      <p
        class="controls svelte-fggesx"
      >
        <button
          class="svelte-u16ygp primary iconOnly large"
          data-testid="play"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="svelte-u16ygp primary iconOnly large"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-u16ygp"
          >
            playlist_add
          </i>
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-fggesx"
    >
      <h3>
        Foo Fighters
      </h3>
       
    </header>
  </article>
</section>
`;
